--- a/angular-portfolio/src/styles.scss
+++ b/angular-portfolio/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  margin: 0px;
+  padding: 0px;
+  margin: 0;
+  font-family: "Gill Sans", sans-serif;
+}
+
+html,
+body {
+  height: 100%;
+}
